# Compatibility-Testing

./: README.md
CT/: CMakeLists.txt  ClusterInitializer.cpp  ClusterInitializer.h  CompatibilityAnalyzer.cpp  CompatibilityAnalyzer.h  FastCompatibilityTest.cpp  FastCompatibilityTest.h  HDT.cpp  HDT.h  HDT_Structure.h  InputGenerator.cpp  InputGenerator.h  Linked_List_Builder.cpp  Linked_List_Builder.h  Parser.cpp  Parser.h  ScoreAnalyzer.cpp  ScoreAnalyzer.h  SpanningForest.cpp  SpanningForest.h  SparseTable.cpp  SparseTable.h  Treap.cpp  Treap.h  TreeStructure.h  main.cpp
__MACOSX/CT/: ._Linked_List_Builder.h
command/: commands for real data.txt
data/: LegumeSuperinput
data/placentalmammals/: README
data/placentalmammals/cleaning script/: cleanBeck.py
data/placentalmammals/original data file/: Beck_et_al._complete_analysis_source_trees.nex
data/placentalmammals/sourcetrees/: beck.source_trees
data/seabirds/: README
data/seabirds/cleaning scripts/: cleanKennedy.py  recleanKennedy.py
data/seabirds/original data files/: A96fig_withnames.tre  B98fig_withnames.tre  H98fig_withnames.tre  I85fig_withnames.tre  N98fig_withnames.tre  P95fig_withnames.tre  S90fig_withnames.tre
data/seabirds/sourcetrees/: ca.tree  se.tree  small tree.tree  small tree2.tree
